tests/snapshots/examples_fixtures/type_system__failing__81_match_bool_missing_false.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/81_match_bool_missing_false.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/81_match_bool_missing_false.flx:27:1
   |
27 | match b {
   | ^^^^^^^^^
28 |     true -> 1
   | ^^^^^^^^^^^^^
29 | };
   | ^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
